<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".NewGoalActivity">

    <Toolbar
        android:id="@+id/goalNameToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/oceanblue"
        android:titleTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/GoalMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Goal Name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </Toolbar>


    <LinearLayout
        android:id="@+id/GoalMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalNameToolbar">

        <LinearLayout
            android:id="@+id/monthViewLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/goalNameToolbar">


            <Button
                android:id="@+id/day1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day1"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day2"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day3"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day4"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day5"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day6"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day7"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthViewLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/monthViewLayout1">


            <Button
                android:id="@+id/day8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day8"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day9"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day10"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day11"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day11"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day12"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day13"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day14"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthViewLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/monthViewLayout2">


            <Button
                android:id="@+id/day15"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day15"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day16"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day16"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day17"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day17"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day18"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day18"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day19"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day19"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day20"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day20"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day21"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day21"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthViewLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/monthViewLayout3">


            <Button
                android:id="@+id/day22"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day22"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day23"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day23"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day24"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day25"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day25"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day26"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day26"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day27"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day27"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day28"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day28"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthViewLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/monthViewLayout4">


            <Button
                android:id="@+id/day29"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day29"
                android:textColor="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/day30"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/day30"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_goalBtn"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/oceanblue"
        app:tint="@color/white"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>